--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ ChatWave\db.sqlite3
 ChatWave\songs
 ChatWave/songs
 ChatWave/thumbnails
+Security/tenorapikey
+Security\tenorapikey
+ChatWave/ChatWave/settings.py
