--- a/ChatWave/.gitignore
+++ b/ChatWave/.gitignore
@@ -13,6 +13,13 @@ __pycache__/
 __pycache__/
 db.sqlite3
 db.sqlite3-journal
+Chat/__pycache__/
+Auth/__pycache__/
+Auth/__pycache__
+Chat/__pycache__
+ChatWave/__pycache__/
+ChatWave/__pycache__
+Profile/__pycache__/
 
 # Media/Static files
 media/
